Cambios de Saludos y YOUTUBE

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Esta es una prueba de desarrollo
+        Hola amigos y amigas sigueme en YouTube Diariodeunbillonario
     </p>
 </body>
 </html>
